# ros-repo-3

./: .gitignore  README.md
OD_robot/client/: client.py
OD_robot/rfid_reader/: setup.cfg
aiServer/: README.md  model.py  server.py
camera_pub/src/camera_package/: package.xml  setup.py
camera_pub/src/camera_package/camera_package/: test_node.py
camera_sub/src/camera_package/: package.xml  setup.py
camera_sub/src/camera_package/camera_package/: camera_node.py
detection/: box.ipynb
esp32/: outbound_tag_reader.ino  packing_led.ino
gui/: README.md
gui/customer/: CustomerGUI.pro  Resources.qrc  button.cpp  button.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  shopping_cart.cpp  shopping_cart.h
gui/odm/: package.xml  setup.cfg  setup.py
gui/odm/odm/: odm.py  odm_monitor.py  odm_test.py
gui/odms/: odms.ui
gui/odw/: odw.py  odw.ui  resource.qrc  resource_rc.py
gui/outbound_delivery_robot_interfaces/msg/: Location.msg
gui/wms/: camera_thread.py  map.pgm  wms.py  wms.ui  wms_test.py
gui/wms_monitor/: map.pgm  map.yaml  package.xml  setup.cfg  setup.py
gui/wms_monitor/wms_monitor/: wms.py  wms.ui  wms_monitor.py  wms_test.py
micro-ros/: led.c
odRobot/client/: client.py
odRobot/odbot_astar_movement/: setup.py
odRobot/odbot_astar_movement/launch/: bridge_launch.xml
odRobot/rfid_reader/: package.xml
odServer/: README.md  odServer.py
odServer/ros/: outbound_pub.py
odServer/router/: camera.py  led.py  manager.py  reader.py
outbound_delivery_robot/outbound_delivery_robot_behavior/: package.xml  setup.cfg
outbound_delivery_robot/outbound_delivery_robot_interfaces/: CMakeLists.txt  package.xml
outbound_delivery_robot/outbound_delivery_robot_interfaces/msg/: AStar.msg
outbound_delivery_robot/outbound_delivery_robot_movement/odbot_astar_movement/: astar_movement.py  command_publisher.py
outbound_delivery_robot/outbound_delivery_robot_tag_reader/rfid_reader/: rfid_publisher_node.py
outbound_delivery_robot/src/outbound_delivery_robot_behavior/: setup.py
outbound_delivery_robot/src/outbound_delivery_robot_behavior/behavior_tree/: bt.xml
outbound_delivery_robot/src/outbound_delivery_robot_camera/: package.xml  setup.cfg  setup.py
outbound_delivery_robot/src/outbound_delivery_robot_camera/outbound_delivery_robot_camera/: camera_pub_node.py  client.py
outbound_delivery_robot/src/outbound_delivery_robot_controller/: package.xml  setup.cfg  setup.py
outbound_delivery_robot/src/outbound_delivery_robot_controller/outbound_delivery_robot_controller/: robot_controller.py
outbound_delivery_robot/src/outbound_delivery_robot_interfaces/: CMakeLists.txt  package.xml
outbound_delivery_robot/src/outbound_delivery_robot_interfaces/msg/: Location.msg
outbound_delivery_robot/src/outbound_delivery_robot_movement/: package.xml  setup.cfg  setup.py
outbound_delivery_robot/src/outbound_delivery_robot_movement/Class/: Astar.py
outbound_delivery_robot/src/outbound_delivery_robot_movement/config/: movement_bridge.yaml
outbound_delivery_robot/src/outbound_delivery_robot_movement/launch/: bridge_launch.xml
outbound_delivery_robot/src/outbound_delivery_robot_movement/odbot_astar_movement/: astar_movement.py  command_path.py  command_planned.py  command_publisher.py  domain_bridge.yaml
outbound_delivery_robot/src/outbound_delivery_robot_movement/outbound_delivery_robot_movement/: command_path.py  command_planned.py  subscript_command.py
outbound_delivery_robot/src/outbound_delivery_robot_navigation2/: CMakeLists.txt  package.xml
outbound_delivery_robot/src/outbound_delivery_robot_navigation2/launch/: bringup_launch.py  map_building.launch.py
outbound_delivery_robot/src/outbound_delivery_robot_navigation2/params/: nav2_params.yaml
outbound_delivery_robot/src/outbound_delivery_robot_sensor/: package.xml  setup.cfg  setup.py
outbound_delivery_robot/src/outbound_delivery_robot_sensor/rfid_reader/: rfid_subscriber_node.py  tag_reader.py
outbound_delivery_robot/src/outbound_delivery_robot_sensor/ultrasonic_sensor/: ultrasonic_sensor.py  ultrasonic_sensor_node.py
outbound_delivery_robot/src/outbound_delivery_robot_tag_reader/: package.xml  setup.py
outbound_delivery_robot/src/outbound_delivery_robot_tag_reader/rfid_reader/: rfid_publisher_node.py
outbound_delivery_server/: odServer.py
outbound_delivery_server/connection/: config.ini  database.py
outbound_delivery_server/ros/: publisher.py
outbound_delivery_server/router/: camera.py  location.py  reader.py
outbound_delivery_server/src/server/: CMakeLists.txt  package.xml
outbound_delivery_server/src/server/config/: database.yaml
outbound_delivery_server/src/server/include/server/: address.hpp  camera_detection.hpp  database_connection.hpp  destination.hpp  gui_communication.hpp  led_control.hpp  order_manager.hpp  outbound.hpp  robot_status.hpp  tag_reader.hpp  task_planner.hpp  yaml_reader.hpp
outbound_delivery_server/src/server/src/: server.cpp
pinkbot/src/rfid_reader/: setup.py
server/: crowServer.cpp
server/connection/: config.json  database_connection.h
server/router/: database_manager.h
server_AI/: server.py
