<package format="3">
  <name>rfid_reader</name>
  <version>0.1.0</version>
  <description>RFID Publisher Node for ROS 2</description>
  <maintainer email="yokim@todo.todo">yokim</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>RPi.GPIO</exec_depend>
  <exec_depend>mfrc522</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
