<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>camera_package</name>
  <version>0.0.0</version>
  <description>A package for object detection and robot control using camera and LIDAR data.</description>
  <maintainer email="kjy@todo.todo">kjy</maintainer>
  <license>MIT</license> <!-- 실제 사용하고 있는 라이센스 이름으로 변경 -->

  <!-- Build dependencies -->
  <depend>rclpy</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>opencv-python</depend>
  <depend>ultralytics</depend>
  <depend>ament_cmake</depend>

  <!-- Test dependencies -->
  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
